--- a/config/custom_rules/direct.yaml
+++ b/config/custom_rules/direct.yaml
@@ -1,2 +1,2 @@
 payload:
-  - DOMAIN-SUFFIX,subscribe.xxxxxx.com
+  - DOMAIN-SUFFIX,subscribe.https://raw.githubusercontent.com/tony-sung/clash/main/subscription/0.yaml.
